infrastructure/terraform/modules/network/vpc.tf
# Create the VPC main resource
resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
}
